Gestion admin(bien,categorie,message,statistique)

--- a/templates/bodyHome.html.twig
+++ b/templates/bodyHome.html.twig
@@ -216,7 +216,7 @@
 								</div>
 
 								<div class="trend-content p-4">
-									<h5 class="theme">{{bien.categorie}}</h5>
+									<h5 class="theme">{#{{bien.categorie}}#}</h5>
 									<h4>
 										<a href="grid-leftfilter.html">{{bien.description}}</a>
 									</h4>
@@ -240,18 +240,18 @@
 
 								</div>
 								<!--
-																																																																																																																										<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-																																																																																																																											<li class="me-2">
-																																																																																																																												<i class="fa fa-eye"></i>
-																																																																																																																												3 Beds</li>
-																																																																																																																											<li class="me-2">
-																																																																																																																												<i class="fa fa-heart"></i>
-																																																																																																																												2 Baths</li>
-																																																																																																																											<li>
-																																																																																																																												<i class="fa fa-comments"></i>
-																																																																																																																												600 Sq Ft</li>
-																																																																																																																										</ul>
-																																																																																																																										-->
+																																																																																																																																																																		<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
+																																																																																																																																																																			<li class="me-2">
+																																																																																																																																																																				<i class="fa fa-eye"></i>
+																																																																																																																																																																				3 Beds</li>
+																																																																																																																																																																			<li class="me-2">
+																																																																																																																																																																				<i class="fa fa-heart"></i>
+																																																																																																																																																																				2 Baths</li>
+																																																																																																																																																																			<li>
+																																																																																																																																																																				<i class="fa fa-comments"></i>
+																																																																																																																																																																				600 Sq Ft</li>
+																																																																																																																																																																		</ul>
+																																																																																																																																																																		-->
 							</div>
 						</div>
 					{% endfor %}
@@ -520,61 +520,6 @@
 		</div>
 		<!-- why us ends -->
 	</div>
-</section><!-- about-us ends --><!-- testomonial start --><section class="testimonial pb-5 pt-9">
-	<div class="container">
-		<div class="section-title mb-4 pb-1 w-75 mx-auto text-center">
-			<h2 class="m-0">Good Reviews By
-				<span>Clients</span>
-			</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="row review-slider">
-			<div class="col-sm-4 item">
-				<div class="testimonial-item1 text-center">
-					<div class="details">
-						<p class="m-0">Lorem Ipsum is simply dummy text of the printing andypesetting industry. Lorem ipsum a simple Lorem Ipsum has been the industry's standard dummy hic et quidem. Dignissimos maxime velit unde inventore quasi vero dolorem.</p>
-					</div>
-					<div class="author-info mt-2">
-						<a href="#"><img src="images/testimonial/img1.jpg" alt=""></a>
-						<div class="author-title">
-							<h4 class="m-0 theme2">Jared Erondu</h4>
-							<span>Supervisor</span>
-						</div>
-					</div>
-					<i class="fa fa-quote-left mb-2"></i>
-				</div>
-			</div>
-			<div class="col-sm-4 item">
-				<div class="testimonial-item1 text-center">
-					<div class="details">
-						<p class="m-0">Lorem Ipsum is simply dummy text of the printing andypesetting industry. Lorem ipsum a simple Lorem  Ipsum has been the industry's standard dummy hic et quidem. Dignissimos maxime velit unde inventore quasi vero dolorem.</p>
-					</div>
-					<div class="author-info mt-2">
-						<a href="#"><img src="images/testimonial/img2.jpg" alt=""></a>
-						<div class="author-title">
-							<h4 class="m-0 theme2">Cadic Vegeta</h4>
-							<span>Sr. Consultant</span>
-						</div>
-					</div>
-					<i class="fa fa-quote-left mb-2"></i>
-				</div>
-			</div>
-			<div class="col-sm-4 item">
-				<div class="testimonial-item1 text-center">
-					<div class="details">
-						<p class="m-0">Lorem Ipsum is simply dummy text of the printing andypesetting industry. Lorem ipsum a simple Lorem Ipsum has been the industry's standard dummy hic et quidem. Dignissimos maxime velit unde inventore quasi vero dolorem.</p>
-					</div>
-					<div class="author-info mt-2">
-						<a href="#"><img src="images/testimonial/img3.jpg" alt=""></a>
-						<div class="author-title">
-							<h4 class="m-0 theme2">Jonathan Beri</h4>
-							<span>Sales Manager</span>
-						</div>
-					</div>
-					<i class="fa fa-quote-left mb-2"></i>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+</section><!-- about-us ends --><!-- testomonial start -->
+
 <!-- testimonial ends -->{% endblock %}
