Création du form d'ajout

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,3 +1,21 @@
+<link
+href="{{ asset("assets/css/bootstrap.min.css") }}" rel="stylesheet" type="text/css">
+<!--Custom CSS-->
+<link
+href="{{asset("assets/css/style.css")}}" rel="stylesheet" type="text/css">
+<!--Plugin CSS-->
+<link
+href="{{asset("assets/css/plugin.css")}}" rel="stylesheet" type="text/css">
+<!--Flaticons CSS-->
+<link
+href="{{asset("assets/fonts/flaticon.css")}}" rel="stylesheet" type="text/css">
+<!--Font Awesome-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
+<link
+rel="stylesheet" href="{{asset("assets/fonts/line-icons.css")}}" type="text/css">
+
 <!-- Preloader -->
 <div id="preloader">
 	<div id="status"></div>
@@ -54,20 +72,20 @@
 								<ul
 									class="dropdown-menu">
 									<!--	<li class="submenu dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing List<i class="fa fa-angle-right" aria-hidden="true"></i>
-									</a>
-									<ul class="dropdown-menu">
-									<li>
-										<a href="listing-leftfilter.html">Listing Left Filter</a>
-									</li>
-									<li>
-										<a href="listing-rightfilter.html">Listing Right Filter</a>
-									</li>
-									<li>
-										<a href="listing-fullwidth.html">Listing Fullwidth</a>
-									</li>
-									</ul>
-																	</li> -->
+																		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing List<i class="fa fa-angle-right" aria-hidden="true"></i>
+																		</a>
+																		<ul class="dropdown-menu">
+																		<li>
+																			<a href="listing-leftfilter.html">Listing Left Filter</a>
+																		</li>
+																		<li>
+																			<a href="listing-rightfilter.html">Listing Right Filter</a>
+																		</li>
+																		<li>
+																			<a href="listing-fullwidth.html">Listing Fullwidth</a>
+																		</li>
+																		</ul>
+																										</li> -->
 									<li class="submenu dropdown">
 										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories List<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</a>
@@ -89,9 +107,9 @@
 												<a href="{{path('app_categories_exploitations')}}">EXPLOITATION</a>
 											</li>
 											<!--	<li>
-																		<a href="grid-rightfilter.html">Grid Right Filter</a>
-																	</li>
-																	-->
+																													<a href="grid-rightfilter.html">Grid Right Filter</a>
+																												</li>
+																												-->
 											<li>
 												<a href="{{path('app_categories')}}">Full categories</a>
 											</li>
@@ -132,35 +150,35 @@
 										<a href="{{path('bien_form')}}">Faq</a>
 									</li>
 									<!--<li class="submenu dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard<i class="fa fa-angle-right" aria-hidden="true"></i>
-									</a>
-									<ul class="dropdown-menu">
-																		<li>
-																			<a href="dashboard.html">Dashboard</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-my-profile.html">User Profile</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-messages.html">User Messages</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-add-new.html">Add New</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-list.html">Listing</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-list.html">User Wishlist</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-history.html">History</a>
-																		</li>
-																		<li>
-																			<a href="dashboard-reviews.html">Reviews</a>
-																		</li>
-									</ul>
-																						</li>-->
+																		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard<i class="fa fa-angle-right" aria-hidden="true"></i>
+																		</a>
+																		<ul class="dropdown-menu">
+																											<li>
+																												<a href="dashboard.html">Dashboard</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-my-profile.html">User Profile</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-messages.html">User Messages</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-add-new.html">Add New</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-list.html">Listing</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-list.html">User Wishlist</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-history.html">History</a>
+																											</li>
+																											<li>
+																												<a href="dashboard-reviews.html">Reviews</a>
+																											</li>
+																		</ul>
+																															</li>-->
 								</ul>
 							</li>
 							<li>
