Affichage de page par catégorie

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,8 @@
 
 
 		{% block body %}
-			{{ include ('bodyHome.html.twig') }}
+			{{ include ('bodyHome.html.twig', {'biens' : biens}
+			) }}
 		{% endblock %}
 
 
