--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -111,468 +111,58 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending2.jpg" alt="image">
-									<a href="#" class="flash bg-theme1 white px-3 py-2">
-										<i class="fa fa-flash"></i>
-									</a>
-									<div class="trend-meta d-flex align-items-center justify-content-between">
-										<div class="entry-author">
-											<img src="images/reviewer/2.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Rent</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">Apartment</h5>
-									<h4>
-										<a href="detail-rightside.html">7012 Shine Sehu Street, Liverpool, LC345AC</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$63,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
+						{% for bien in biens %}
+							<div class="col-lg-4 col-md-6 mb-4">
+								<div class="trend-item box-shadow rounded">
+									<div class="trend-image">
+										<img src="images/trending/trending4.jpg" alt="image">
+										<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
+											<div class="entry-author">
+												<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
+												<span>Jenny Lofar</span>
+											</div>
+											<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
 										</div>
 									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
+									<div class="trend-content p-4">
+										<h5 class="theme">{{bien.getTitre()}}</h5>
+										<h4>
+											<a href="detail-rightside.html">{{bien.getDescription()}}</a>
+										</h4>
+										<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
+											<div class="entry-author">
+												<p>Prix<span class="d-block theme fw-bold">{{bien.getPrix()}}
+														€</span>
+												</p>
 
+											</div>
+											<div class="entry-metalist d-flex align-items-center">
+												<ul>
+													<li class="me-2">
+														<i class="fa fa-eye"></i>
+													</li>
+													<li class="me-2">
+														<i class="fa fa-heart"></i>
+													</li>
+												</ul>
+											</div>
+										</div>
+										<p class="mb-0">{{bien.getSurface()}}</p>
+
+									</div>
+									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
+										<li class="me-2">
+											<i class="fa fa-location-arrow"></i>
+											{{bien.getVille()}}</li>
+										<li class="me-2">
+											<i class="fa im-icon-Post-Mail"></i>
+											{{bien.getCodePostal()}}</li>
+
+									</ul>
 								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
 							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending1.jpg" alt="image">
-									<a href="#" class="flash bg-theme1 white px-3 py-2">
-										<i class="fa fa-flash"></i>
-									</a>
-									<div class="trend-meta d-flex align-items-center justify-content-between">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">Villa</h5>
-									<h4>
-										<a href="detail-rightside.html">425 Vine 012 Street, Montreal Canada, UHW45Q</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
 
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending3.jpg" alt="image">
-									<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">House</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending4.jpg" alt="image">
-									<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">House</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending1.jpg" alt="image">
-									<a href="#" class="flash bg-theme1 white px-3 py-2">
-										<i class="fa fa-flash"></i>
-									</a>
-									<div class="trend-meta d-flex align-items-center justify-content-between">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">Villa</h5>
-									<h4>
-										<a href="detail-rightside.html">425 Vine 012 Street, Montreal Canada, UHW45Q</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending3.jpg" alt="image">
-									<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">House</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending4.jpg" alt="image">
-									<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">House</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending1.jpg" alt="image">
-									<a href="#" class="flash bg-theme1 white px-3 py-2">
-										<i class="fa fa-flash"></i>
-									</a>
-									<div class="trend-meta d-flex align-items-center justify-content-between">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">Villa</h5>
-									<h4>
-										<a href="detail-rightside.html">425 Vine 012 Street, Montreal Canada, UHW45Q</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-12 mb-4">
-							<div class="trend-item box-shadow rounded">
-								<div class="trend-image">
-									<img src="images/trending/trending3.jpg" alt="image">
-									<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
-										<div class="entry-author">
-											<img src="images/reviewer/1.jpg" alt="" class="rounded-circle me-1">
-											<span>Jenny Lofar</span>
-										</div>
-										<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">For Sold</a>
-									</div>
-								</div>
-								<div class="trend-content p-4">
-									<h5 class="theme">House</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="entry-meta d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-author">
-											<p>Start From<span class="d-block theme fw-bold">$20,000.00</span>
-											</p>
-
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-0">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-								</div>
-								<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-									<li class="me-2">
-										<i class="fa fa-eye"></i>
-										3 Beds</li>
-									<li class="me-2">
-										<i class="fa fa-heart"></i>
-										2 Baths</li>
-									<li>
-										<i class="fa fa-comments"></i>
-										600 Sq Ft</li>
-								</ul>
-							</div>
-						</div>
+						{% endfor %}
 					</div>
 					<div class="pagination-main text-center">
 						<ul class="pagination">
