insertion bien ok admin ok avec image

--- a/templates/Bundles/EasyAdminBundles/welcome.html.twig
+++ b/templates/Bundles/EasyAdminBundles/welcome.html.twig
@@ -1,4 +1,5 @@
 {# @var ea \EasyCorp\Bundle\EasyAdminBundle\Context\AdminContext #}
+{% use '@EasyAdmin/symfony-form-themes/bootstrap_base_layout.html.twig' %}
 {% extends '@EasyAdmin/page/content.html.twig' %}
 
 {% block content_title 'Welcome to EasyAdmin 3' %}
